package com.zsx.design.pattern.behavioral.observer;

public class ConcreteObserverA implements Observer {

    @Override
    public String update() {
        return "ConcreteObserverA";
    }
}
