package com.zsx.design.pattern.behavioral.observer;

public class ConcreteObserverB implements Observer {

    @Override
    public String update() {
        return "ConcreteObserverB";
    }
}
