package com.zsx.design.pattern.behavioral.observer;

public interface Observer {

    String update();
}
